--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,13 +24,14 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/")
 # Then try to find lace in the OS using find_package.
 # If that fails, then download lace.
 if(NOT TARGET lace)
-  find_package(lace QUIET)
+  find_package(lace 1.5.1 QUIET)
   if(NOT lace_FOUND)
     include(FetchContent)
     FetchContent_Declare(
         lace
         GIT_REPOSITORY https://github.com/trolando/lace.git
-        GIT_TAG        v1.5.0
+        GIT_TAG        v1.5.1
+        GIT_SHALLOW    TRUE
     )
     FetchContent_MakeAvailable(lace)
   endif()
