--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -103,6 +103,10 @@ if(SYLVAN_STATS)
     target_compile_definitions(sylvan PUBLIC SYLVAN_STATS)
 endif()
 
+if(NOT SYLVAN_IS_TOP_PROJECT)
+    mark_as_advanced(SYLVAN_GMP SYLVAN_ENABLE_PIC SYLVAN_NATIVE_OPT SYLVAN_USE_MMAP SYLVAN_STATS)
+endif()
+
 set_target_properties(sylvan PROPERTIES
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib
